<resources>
    <!-- Drop down items -->
    <string-array name="tags">
        <item>Android</item>
        <item>Ballet</item>
        <item>Chess</item>
        <item>Cooking</item>
        <item>Drawing</item>
        <item>English</item>
        <item>Fishing</item>
        <item>Guitar</item>
        <item>Horse Training</item>
        <item>Internet</item>
        <item>Juggling</item>
        <item>Karate</item>
        <item>Legos</item>
        <item>Magic</item>
        <item>Nuclear Fusion</item>
        <item>Origami</item>
        <item>Painting</item>
        <item>Robotics</item>
        <item>Survival</item>
        <item>Tennis</item>
        <item>Ukulele</item>
        <item>Violin</item>
        <item>Writing</item>
        <item>Yoga</item>
        <item>Zumba</item>
    </string-array>

    <!-- Error messages -->
    <string name="error">Error</string>
    <string name="error0">Login failed.</string>
    <string name="error1">Register failed.</string>
    <string name="error2">Update failed.</string>
    <string name="error3">Your device doesn\'t support the crop action.</string>
    <string name="error4">Action canceled.</string>
    <string name="error5">Choose a valid ability.</string>
    <string name="error6">Choose a valid interest.</string>
    <string name="error7">" has already been added."</string>

    <!-- Other stuff -->
    <string name="app_name" translatable="false">Lurn</string>
    <string name="ok" translatable="false">OK</string>
    <string name="profile">Profile</string>
    <string name="user" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">name@domain.com</string>
    <string name="abilities">Abilities</string>
    <string name="interests">Interests</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google+</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="selected_abilities">Selected abilities:</string>
    <string name="selected_interests">Selected interests:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_with">Login with:</string>
    <string name="enter">Enter</string>
    <string name="next">Next</string>
    <string name="match">Match</string>
    <string name="send_notification">Send a match request</string>
    <string name="cancel">Cancel</string>
    <string name="emptyAbility">No abilities yet.</string>
    <string name="emptyInterest">No interests yet.</string>
    <string name="suggestion">Want to learn something new?\nMaybe they can help you:</string>
    <string name="search_hint">Ability search</string>
    <string name="success_request">Request was successfully sent.</string>

</resources>