<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufrn.imd.projeto.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/llUser">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/box"
            android:padding="20dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/ibProfilePicture"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="loadPicture"
                android:contentDescription="@string/profile_picture" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/box"
            android:padding="20dp">

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName"
                android:textStyle="normal|bold"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etName"
                android:layout_below="@id/tvName"/>

            <TextView
                android:text="@string/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail"
                android:layout_below="@id/etName"
                android:textStyle="normal|bold"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmail"
                android:layout_below="@id/tvEmail"/>

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPassword"
                android:layout_below="@id/etEmail"
                android:textStyle="normal|bold"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:layout_below="@id/tvPassword"/>

            <TextView
                android:text="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvConfirmPassword"
                android:layout_below="@id/etPassword"
                android:textStyle="normal|bold"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etConfirmPassword"
                android:layout_below="@id/tvConfirmPassword"/>

        </RelativeLayout>

        <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btGoNextStep"
            android:onClick="confirmRegister"
            android:layout_marginTop="10dp"/>

        <Button
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btUpdate"
            android:onClick="confirmUpdate"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>
