<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="br.ufrn.imd.projeto.activity.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/box"
        android:id="@+id/rlSearchBar"
        android:padding="20dp">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tags"
            android:spinnerMode="dialog"
            android:id="@+id/spSearch"
            android:layout_toStartOf="@+id/ibSearch"
            android:layout_toLeftOf="@+id/ibSearch"
            android:layout_alignTop="@+id/ibSearch"
            android:layout_alignBottom="@id/ibSearch"
            android:textSize="14sp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:id="@+id/ibSearch"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/search"
            android:onClick="search"
            android:padding="5dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spSearch"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:background="@null">

            <RadioButton
                android:text="@string/abilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="12sp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="0dp" />

            <RadioButton
                android:text="@string/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:textSize="12sp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="0dp" />
        </RadioGroup>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llSearchResults">

        </LinearLayout>

    </ScrollView>

</LinearLayout>
